--- a/text.html
+++ b/text.html
@@ -2,6 +2,8 @@
 
   p{
     font-family: Arial;
+    margin-top: 0;
+    margin-bottom: 0;
   }
   .video-title{
     font-weight: bold;
@@ -27,6 +29,25 @@
     color: rgb(96,96,96);
     width: 280px;
     line-height: 28px;
+    margin-bottom: 100px; 
+  }
+
+  .apple-text{
+    margin-bottom: 50px;
+    color: white;
+    font-size: 14px;
+    background-color: rgb(227,65,64);
+    text-align: center;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    
+  }
+  .shop-link{
+    cursor: pointer;
+  }
+  .shop-link:hover{
+    text-decoration: underline;
+    
   }
 </style>
 
@@ -43,4 +64,8 @@
 </p>
 <p class = "video-description">
   Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!
+</p>
+
+<p class = "apple-text">
+  Shop early for the best selection of holiday favourites. <span class="shop-link">Shop now &#62;</span>
 </p>
