--- a/project.html
+++ b/project.html
@@ -1,29 +1,38 @@
-<p>
-  paragraph of text
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>First Website</title>
+  </head>
+  <body>
+    <p>
+      paragraph of text
+    </p>
 
-<button>
-  Hello World
-</button>
+    <button>
+      Hello World
+    </button>
 
-<a href = "https://www.youtube.com" target = "_blank" >
-  Link to Youtube
-</a>
+    <a href = "https://www.youtube.com" target = "_blank" >
+      Link to Youtube
+    </a>
 
 
-<!--Create a link to google .com -->
-<a href = "https://www.google.com" target = "_blank">
-  Google.com
-</a>
+    <!--Create a link to google .com -->
+    <a href = "https://www.google.com" target = "_blank">
+      Google.com
+    </a>
 
-<p></p>
+    <p></p>
 
-<a href = "https://www.amazon.com" target = "_blank">
-  Back to Amazon
-</a>
+    <a href = "https://www.amazon.com" target = "_blank">
+      Back to Amazon
+    </a>
 
-<p>Nike Black Running Shoes</p>
+    <p>Nike Black Running Shoes</p>
 
-<p>$39 - in stock.</p>
+    <p>$39 - in stock.</p>
 
-<p>Free delivery tomorrow.</p>
+    <p>Free delivery tomorrow.</p>
+  </body>
+</html>
+
