--- a/youtube.html
+++ b/youtube.html
@@ -14,8 +14,7 @@
       }
 
       .thumbnail{
-        width: 300px;
-        display: block;
+        width: 100%;
       }
 
       .search-bar{
@@ -25,10 +24,7 @@
       }
 
       .video-preview{
-        width: 300px;
-        display: inline-block;
-        vertical-align: top;
-        margin-right: 15px;
+
       }
 
       .video-title{
@@ -39,15 +35,18 @@
         margin-bottom: 12px;
       }
 
+      .video-info-grid{
+        display:grid;
+        grid-template-columns: 50px 1fr;
+      
+      }
       .channel-picture{
-        display: inline-block;
-        width: 50px;
+
         vertical-align: top;
       }
 
       .video-info{
-        display: inline-block;
-        width: 200px;
+
       }
 
       .profile-picture{
@@ -68,50 +67,142 @@
       .video-author{
         margin-bottom: 4px;
       }
+      .video-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap:16px;
+        row-gap: 40px;
+      }
+ 
     </style>
   </head>
   <body>
     <input class="search-bar" type="text" placeholder="Search">
-    
-    <div class="video-preview">
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
-      </div>
-      <div>
-        <div class="channel-picture">
-          <img class="profile-picture" src="channel-pics/channel-1.jpeg">
+    <div class = "video-grid">
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
         </div>
-        <div class="video-info">
-          <p class="video-title">
-            Talking Tech and AI with Google CEO Sundar Pichai!
-          </p>
-          <p class="video-author">
-            Marques Brownlee
-          </p>
-          <p class="video-stats">
-            3.4M views &#183; 6 months ago
-          </p>
+        <div class = "video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pics/channel-1.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">
+              Marques Brownlee
+            </p>
+            <p class="video-stats">
+              3.4M views &#183; 6 months ago
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="video-preview">
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
-      </div>
-      <div>
-        <div class="channel-picture">
-          <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
         </div>
-        <div class="video-info">
-          <p class="video-title">
-            Try Not To Laugh Challenge #9
-          </p>
-          <p class="video-author">
-            Markiplier
-          </p>
-          <p class="video-stats">
-            19M views &#183; 4 years ago
-          </p>
+        <div class = "video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Try Not To Laugh Challenge #9
+            </p>
+            <p class="video-author">
+              Markiplier
+            </p>
+            <p class="video-stats">
+              19M views &#183; 4 years ago
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+        </div>
+        <div class = "video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pics/channel-1.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">
+              Marques Brownlee
+            </p>
+            <p class="video-stats">
+              3.4M views &#183; 6 months ago
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+        </div>
+        <div class = "video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Try Not To Laugh Challenge #9
+            </p>
+            <p class="video-author">
+              Markiplier
+            </p>
+            <p class="video-stats">
+              19M views &#183; 4 years ago
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+        </div>
+        <div class = "video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pics/channel-1.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">
+              Marques Brownlee
+            </p>
+            <p class="video-stats">
+              3.4M views &#183; 6 months ago
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+        </div>
+        <div class = "video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Try Not To Laugh Challenge #9
+            </p>
+            <p class="video-author">
+              Markiplier
+            </p>
+            <p class="video-stats">
+              19M views &#183; 4 years ago
+            </p>
+          </div>
         </div>
       </div>
     </div>
