adds the notification count using absolute and relative positions

--- a/position.html
+++ b/position.html
@@ -24,7 +24,22 @@
     bottom: 0;
     left: 0;
     top: 50px;
-    width: 72px;"></div>
+    width: 72px;">
+    sidebar
+
+    <div style="
+    position:absolute;
+    background-color: red;
+    color: white;
+    z-index: 1;
+    top: 0px;
+    right:0px;
+    ">
+      X
+    </div>
+  </div>
+
+   
     <div style = 
     "background-color: lightblue;
     height: 200px;
