adds the hover message underneath the header icons and adds href to video preview

--- a/youtube.html
+++ b/youtube.html
@@ -21,21 +21,34 @@
         <input class="search-bar" type="text" placeholder="Search">
         <button class = "search-button">
           <img class = "search-icon" src="icons/search.svg">
+          <div class = "tool-tip">Search</div>
         </button>
         <button class = "voice-search-button">
           <img  class="voice-search-icon"src="icons/voice-search-icon.svg">
+          <div class = "tool-tip">Search wtih your voice</div>
         </button>
       </div>
       <div class="right-section">
-        <img class = "upload-icon" src = "icons/upload.svg">
-        <img class = "youtube-apps" src = "icons/youtube-apps.svg">
+        <div class ="upload-icon-container">
+          <img class = "upload-icon" src = "icons/upload.svg">
+          <div class = "tool-tip">Create</div>
+        </div>
+        <div class = "apps-icon-container">
+          <img class = "youtube-apps" src = "icons/youtube-apps.svg">
+          <div class = "tool-tip">Apps</div>
+        </div>
         <div class = "notifications-icon-container">
           <img class = "notifications-icon" src = "icons/notifications.svg">
+          <div class = "tool-tip">Apps</div>
           <div class = "notifications-count">
             3
           </div>
         </div>
-        <img class = "current-user-picture" src = "channel-pics/my-channel.jpeg">
+        <div class = "current-user-container">
+          <img class = "current-user-picture" src = "channel-pics/my-channel.jpeg">
+          <div class = "tool-tip">My Channel</div>
+        </div>
+
       </div>
     </div>
 
@@ -74,18 +87,18 @@
     <div class = "video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+          <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-1.jpeg">
+            <a href = "https://www.youtube.com/@mkbhd" target = "_blank"><img class="profile-picture" src="channel-pics/channel-1.jpeg"></a>
           </div>
           <div class="video-info">
             <p class="video-title">
-              Talking Tech and AI with Google CEO Sundar Pichai!
+              <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank">Talking Tech and AI with Google CEO Sundar Pichai!</a>
             </p>
             <p class="video-author">
-              Marques Brownlee
+              <a href = "https://www.youtube.com/@mkbhd" target = "_blank">Marques Brownlee </a>
             </p>
             <p class="video-stats">
               3.4M views &#183; 6 months ago
@@ -95,18 +108,26 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
+            <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          </a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+              <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            </a>
+   
           </div>
           <div class="video-info">
             <p class="video-title">
-              Try Not To Laugh Challenge #9
+              <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">Try Not To Laugh Challenge #9</a>
             </p>
             <p class="video-author">
-              Markiplier
+              <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+                Markiplier
+              </a>
+
             </p>
             <p class="video-stats">
               19M views &#183; 4 years ago
@@ -116,18 +137,18 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+          <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-1.jpeg">
+            <a href = "https://www.youtube.com/@mkbhd" target = "_blank"><img class="profile-picture" src="channel-pics/channel-1.jpeg"></a>
           </div>
           <div class="video-info">
             <p class="video-title">
-              Talking Tech and AI with Google CEO Sundar Pichai!
+              <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank">Talking Tech and AI with Google CEO Sundar Pichai!</a>
             </p>
             <p class="video-author">
-              Marques Brownlee
+              <a href = "https://www.youtube.com/@mkbhd" target = "_blank">Marques Brownlee </a>
             </p>
             <p class="video-stats">
               3.4M views &#183; 6 months ago
@@ -137,18 +158,26 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
+            <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          </a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+              <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            </a>
+   
           </div>
           <div class="video-info">
             <p class="video-title">
-              Try Not To Laugh Challenge #9
+              <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">Try Not To Laugh Challenge #9</a>
             </p>
             <p class="video-author">
-              Markiplier
+              <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+                Markiplier
+              </a>
+
             </p>
             <p class="video-stats">
               19M views &#183; 4 years ago
@@ -158,18 +187,18 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+          <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-1.jpeg">
+            <a href = "https://www.youtube.com/@mkbhd" target = "_blank"><img class="profile-picture" src="channel-pics/channel-1.jpeg"></a>
           </div>
           <div class="video-info">
             <p class="video-title">
-              Talking Tech and AI with Google CEO Sundar Pichai!
+              <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank">Talking Tech and AI with Google CEO Sundar Pichai!</a>
             </p>
             <p class="video-author">
-              Marques Brownlee
+              <a href = "https://www.youtube.com/@mkbhd" target = "_blank">Marques Brownlee </a>
             </p>
             <p class="video-stats">
               3.4M views &#183; 6 months ago
@@ -179,18 +208,26 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
+            <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          </a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+              <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            </a>
+   
           </div>
           <div class="video-info">
             <p class="video-title">
-              Try Not To Laugh Challenge #9
+              <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">Try Not To Laugh Challenge #9</a>
             </p>
             <p class="video-author">
-              Markiplier
+              <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+                Markiplier
+              </a>
+
             </p>
             <p class="video-stats">
               19M views &#183; 4 years ago
@@ -200,18 +237,18 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+          <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-1.jpeg">
+            <a href = "https://www.youtube.com/@mkbhd" target = "_blank"><img class="profile-picture" src="channel-pics/channel-1.jpeg"></a>
           </div>
           <div class="video-info">
             <p class="video-title">
-              Talking Tech and AI with Google CEO Sundar Pichai!
+              <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank">Talking Tech and AI with Google CEO Sundar Pichai!</a>
             </p>
             <p class="video-author">
-              Marques Brownlee
+              <a href = "https://www.youtube.com/@mkbhd" target = "_blank">Marques Brownlee </a>
             </p>
             <p class="video-stats">
               3.4M views &#183; 6 months ago
@@ -221,18 +258,26 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
+            <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          </a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+              <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            </a>
+   
           </div>
           <div class="video-info">
             <p class="video-title">
-              Try Not To Laugh Challenge #9
+              <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">Try Not To Laugh Challenge #9</a>
             </p>
             <p class="video-author">
-              Markiplier
+              <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+                Markiplier
+              </a>
+
             </p>
             <p class="video-stats">
               19M views &#183; 4 years ago
@@ -242,18 +287,18 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+          <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-1.jpeg">
+            <a href = "https://www.youtube.com/@mkbhd" target = "_blank"><img class="profile-picture" src="channel-pics/channel-1.jpeg"></a>
           </div>
           <div class="video-info">
             <p class="video-title">
-              Talking Tech and AI with Google CEO Sundar Pichai!
+              <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank">Talking Tech and AI with Google CEO Sundar Pichai!</a>
             </p>
             <p class="video-author">
-              Marques Brownlee
+              <a href = "https://www.youtube.com/@mkbhd" target = "_blank">Marques Brownlee </a>
             </p>
             <p class="video-stats">
               3.4M views &#183; 6 months ago
@@ -263,18 +308,26 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
+            <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          </a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+              <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            </a>
+   
           </div>
           <div class="video-info">
             <p class="video-title">
-              Try Not To Laugh Challenge #9
+              <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">Try Not To Laugh Challenge #9</a>
             </p>
             <p class="video-author">
-              Markiplier
+              <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+                Markiplier
+              </a>
+
             </p>
             <p class="video-stats">
               19M views &#183; 4 years ago
@@ -284,18 +337,18 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+          <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-1.jpeg">
+            <a href = "https://www.youtube.com/@mkbhd" target = "_blank"><img class="profile-picture" src="channel-pics/channel-1.jpeg"></a>
           </div>
           <div class="video-info">
             <p class="video-title">
-              Talking Tech and AI with Google CEO Sundar Pichai!
+              <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank">Talking Tech and AI with Google CEO Sundar Pichai!</a>
             </p>
             <p class="video-author">
-              Marques Brownlee
+              <a href = "https://www.youtube.com/@mkbhd" target = "_blank">Marques Brownlee </a>
             </p>
             <p class="video-stats">
               3.4M views &#183; 6 months ago
@@ -305,22 +358,33 @@
       </div>
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
+            <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          </a>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+              <img class="profile-picture" src="channel-pics/channel-2.jpeg">
+            </a>
+   
           </div>
           <div class="video-info">
             <p class="video-title">
-              Try Not To Laugh Challenge #9
+              <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">Try Not To Laugh Challenge #9</a>
             </p>
             <p class="video-author">
-              Markiplier
+              <a href = "https://www.youtube.com/@markiplier" target = "_blank">
+                Markiplier
+              </a>
+
             </p>
             <p class="video-stats">
               19M views &#183; 4 years ago
             </p>
+          </div>
+        </div>
+      </div>
           </div>
         </div>
       </div>
