adds links to the video and channel also adds video times in bottom right

--- a/youtube.html
+++ b/youtube.html
@@ -88,6 +88,8 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
+          <div class = "video-time">14:20</div>
+
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
@@ -110,6 +112,8 @@
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
             <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+            <div class = "video-time">8:22</div>
+
           </a>
         </div>
         <div class = "video-info-grid">
@@ -138,6 +142,8 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
+          <div class = "video-time">14:20</div>
+
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
@@ -160,6 +166,8 @@
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
             <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+            <div class = "video-time">8:22</div>
+
           </a>
         </div>
         <div class = "video-info-grid">
@@ -188,6 +196,8 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
+          <div class = "video-time">14:20</div>
+
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
@@ -210,6 +220,8 @@
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
             <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+            <div class = "video-time">8:22</div>
+
           </a>
         </div>
         <div class = "video-info-grid">
@@ -238,6 +250,8 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
+          <div class = "video-time">14:20</div>
+
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
@@ -260,6 +274,8 @@
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
             <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+            <div class = "video-time">8:22</div>
+
           </a>
         </div>
         <div class = "video-info-grid">
@@ -288,6 +304,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
+          <div class = "video-time">14:20</div>
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
@@ -310,6 +327,8 @@
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
             <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+            <div class = "video-time">8:22</div>
+
           </a>
         </div>
         <div class = "video-info-grid">
@@ -338,6 +357,8 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=n2RNcPRtAiY" target = "_blank"><img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
+          <div class = "video-time">14:20</div>
+
         </div>
         <div class = "video-info-grid">
           <div class="channel-picture">
@@ -360,6 +381,8 @@
         <div class="thumbnail-row">
           <a href = "https://www.youtube.com/watch?v=mP0RAo9SKZk" target = "_blank">
             <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+            <div class = "video-time">8:22</div>
+
           </a>
         </div>
         <div class = "video-info-grid">
